# BotDoBolao

./: .coverage  .env.example  .gitignore  CLAUDE.md  COMPLETION.md  COMPLETION_TELEGRAM.md  Dockerfile  PROGRESS.md  RALPH.md  README.md  alembic.ini  config.example.yaml  docker-compose.yml  pyproject.toml
docker/: entrypoint.sh
docs/superpowers/plans/: 2026-06-15-cut-first-scorer.md  2026-06-15-kickoff-goal-notifications.md  2026-06-15-pre-game-bet-reminder.md
tests/: test_api_football_mapping.py  test_api_football_provider.py  test_apostar_delete.py  test_apostar_flow.py  test_apostar_scorer.py  test_apostar_view.py  test_bets.py  test_bets_cog.py  test_bets_logic.py  test_bets_view.py  test_board.py  test_board_cog.py  test_bootstrap.py  test_bot_skeleton.py  test_budget.py  test_budget_e2e.py  test_claude_md.py  test_cli.py  test_cli_admin.py  test_cli_crud.py  test_cli_result.py  test_cli_sync.py  test_composition.py  test_config.py  test_config_example.py  test_db.py  test_deploy.py  test_e2e_fake.py  test_fake_provider.py  test_logging.py  test_migrations.py  test_poll_cog.py  test_poll_collect.py  test_poll_notifications.py  test_providers_base.py  test_readme.py  test_reminder_cog.py  test_reminder_logic.py  test_render_payload.py  test_repositories.py  (+12 more)
tigrinho/: __init__.py  __main__.py  bootstrap.py  cli.py  config.py  logging.py
tigrinho/bot/: __init__.py  alerts.py  apostar_view.py  bets_cog.py  bets_logic.py  bets_view.py  board_cog.py  client.py  help_cog.py  poll_cog.py  reminder_cog.py  subscribe_cog.py  sync_cog.py  sync_planning.py
tigrinho/db/: __init__.py  engine.py  models.py  repositories.py  types.py
tigrinho/domain/: __init__.py  bets.py  scoring.py  settlement.py  text_pt.py
tigrinho/providers/: __init__.py  api_football.py  base.py  budget.py  fake.py  retry.py
(+11 files in other folders)
