[project]
name = "tigrinho-da-copa"
version = "0.1.0"
description = "Discord bot for friendly (no real money) FIFA World Cup 2026 bets."
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings[yaml]>=2.14.1",
    "structlog>=26.1.0",
    "tzdata>=2026.2",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "mypy>=1.14",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tigrinho"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
plugins = ["pydantic.mypy"]
exclude = ['^\.venv/']

[tool.pydantic-mypy]
init_forbid_extra = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
